@@ -1,6 +1,7 @@
 June 2024 8.8
  - PHP 8.1 or higher required
  - Samba 3: dropped support for LM password hashes (307)
+ - Configuration: added filter for available account modules
 
 
 16.03.2024 8.7
